welcome.lessons.welcome.variables.Variables.scala.error
Variables:3: error: '(' expected but identifier found.
for nbpas from 0 to 6 do{
    ^Variables:11: error: illegal start of simple expression
	}
        ^